@@ -1,3 +1,8 @@
+30 November 2007: Wouter
+	- makefile that creates libunbound.la, basic file or libunbound.a
+	  when creating static executables (no libtool).
+	- more API setup.
+
 29 November 2007: Wouter
 	- 0.9 public API start.
 
